# template_python

./: README.md  init-project.sh  pyproject.toml  run.sh
tests/: test_main.py
